--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,16 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "mockery/mockery": "dev-master"
+        "php": ">=5.3.0",
+        "laravel/framework": "~4.0"
     },
     "autoload": {
         "classmap": [
             "src/controllers",
             "src/migrations",
-            "src/models"
+            "src/models",
+            "src/providers",
+            "src/repositories"
         ],
         "psr-0": {
             "Larrytech\\Auth": "src/"
