--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,7 @@
     },
     "autoload": {
         "classmap": [
-            "src/controllers",
-            "src/migrations",
-            "src/models",
-            "src/providers",
-            "src/repositories"
+            "src/migrations"
         ],
         "psr-0": {
             "Larrytech\\Auth": "src/"
