Change Author in Composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "George Robinson",
-            "email": "george@rbsn.me"
+            "email": "george.robinson@larrytech.com"
         }
     ],
     "require": {
